--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-simple-typewriter": "^5.0.1",
     "react-tsparticles": "^2.12.2",
     "react-typed": "^2.0.12",
